# ewrs

./: Cargo.toml  LICENSE  README.md  build.rs  ewrs.rc
src/: lib.rs  main-w.rs  main.rs
src/emacs/: common.rs  mod.rs  options.rs  unix.rs  win.rs
test/data/: server
