[package]
name = "ewrs"
version = "0.2.2"
authors = ["Iku Iwasa <iku.iwasa@gmail.com>"]
build = "build.rs"

[target.'cfg(unix)'.dependencies]
libc = "*"

[target.'cfg(windows)'.dependencies]
winapi = "*"
kernel32-sys = "*"
user32-sys = "*"
widestring = "*"

[target.'cfg(windows)'.build-dependencies]
winres = "*"

[[bin]]
name = "ew"
path = "src/main.rs"
